<resources>
    <string name="app_name">人人视频(赵氏双雄)</string>

    <string name="home_page">首页</string>
    <string name="mine">我的</string>
    <string name="channel">频道</string>
    <string name="find">发现</string>
    <string name="recommendForYou">为你推荐</string>
    <string name="test">测试</string>
    <string name="alreadyLoaded">已经加载完毕</string>
    <string name="todayRecommend">今日推荐</string>
    <string name="billboard">排行榜</string>
    <string name="share">分享</string>
    <string name="cache">缓存</string>
    <string name="like">喜欢</string>
    <string name="more">更多</string>
    <string name="mineSubscribe">我的收藏</string>
    <string name="correlationRecommend">相关推荐</string>

    <string name="selectAll">全选</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="useThirdPartyLogin">使用第三方登录</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="newUserLogon">新用户注册</string>
    <string name="loginPassword">登录密码</string>
    <string name="showAddress">点击显示地址信息显示</string>
    <string name="stopAddress">停止获取</string>
    <string name="gotoShowAddress">获取定位地图</string>
    <string name="animate">Animate</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">—</string>

</resources>
