<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ziyuanziwen.everybodyvideo.myeverybodyvideo.MainActivity">

    <FrameLayout
        android:id="@+id/mainAty_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_zero"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/mainAty_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_sixty"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/mainAty_rbtHomePage"
            android:layout_width="@dimen/layout_width_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/home_page"
            android:gravity="center"
            android:text="@string/home_page"
            android:textColor="@drawable/select_color" />

        <RadioButton
            android:id="@+id/mainAty_rbtChannel"
            android:layout_width="@dimen/layout_width_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/channel"
            android:gravity="center"
            android:text="@string/channel"
            android:textColor="@drawable/select_color" />

        <RadioButton
            android:id="@+id/mainAty_rbtFind"
            android:layout_width="@dimen/layout_width_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/find"
            android:gravity="center"
            android:text="@string/find"
            android:textColor="@drawable/select_color" />

        <RadioButton
            android:id="@+id/mainAty_rbtMine"
            android:layout_width="@dimen/layout_width_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/mine"
            android:gravity="center"
            android:text="@string/mine"
            android:textColor="@drawable/select_color" />

    </RadioGroup>

</LinearLayout>
