<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_one_hundred_and_seventy">

        <io.vov.vitamio.widget.CenterLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <io.vov.vitamio.widget.VideoView
                android:id="@+id/buffer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />
        </io.vov.vitamio.widget.CenterLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/probar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/download_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:text="" />

            <TextView
                android:id="@+id/load_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:text="" />
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fragment_choiceSecondTodayRecommendCommentsIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin_end_ten"
            android:layout_marginEnd="@dimen/layout_margin_end_five"
            android:layout_marginStart="@dimen/layout_margin_start_five"
            android:layout_marginTop="@dimen/layout_margin_top_ten"
            android:background="@mipmap/ic_comment_32" />

        <TextView
            android:id="@+id/fragment_choiceSecondTodayRecommendCommentsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/fragment_choiceSecondTodayRecommendCommentsIv"
            android:text="@string/test"
            android:textSize="@dimen/text_size_fifteen" />

        <TextView
            android:id="@+id/fragment_choiceSecondTodayRecommendShareTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/layout_margin_end_five"
            android:text="@string/share"
            android:textSize="@dimen/text_size_fifteen" />

        <ImageView
            android:id="@+id/fragment_choiceSecondTodayRecommendShareIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/layout_margin_end_five"
            android:layout_toLeftOf="@id/fragment_choiceSecondTodayRecommendShareTv"
            android:background="@mipmap/ic_share_n_32" />

        <TextView
            android:id="@+id/fragment_choiceSecondTodayRecommendCacheTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/layout_margin_end_ten"
            android:layout_toLeftOf="@id/fragment_choiceSecondTodayRecommendShareIv"
            android:text="@string/cache"
            android:textSize="@dimen/text_size_fifteen" />

        <ImageView
            android:id="@+id/fragment_choiceSecondTodayRecommendCacheIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/layout_margin_end_five"
            android:layout_toLeftOf="@id/fragment_choiceSecondTodayRecommendCacheTv"
            android:background="@mipmap/ic_download_32" />

        <TextView
            android:id="@+id/fragment_choiceSecondTodayRecommendLikeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/layout_margin_end_ten"
            android:layout_toLeftOf="@id/fragment_choiceSecondTodayRecommendCacheIv"
            android:text="@string/like"
            android:textSize="@dimen/text_size_fifteen" />

        <ImageView
            android:id="@+id/fragment_choiceSecondTodayRecommendLikeIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/layout_margin_end_five"
            android:layout_toLeftOf="@id/fragment_choiceSecondTodayRecommendLikeTv"
            android:background="@mipmap/ic_like_" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_choiceSecondTodayRecommendRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>